# GrumpyTools

GrumpyShell/: CMakeLists.txt
GrumpyShell/DOCS/Style_Exaples/: ClownShell.config  MainLoop.clown  script.clown
GrumpyShell/Shell/: Actions.clown  ActionsWithType.clown  ActionsWithTypeAndParam.clown  Functions.clown
GrumpyShell/src/: main.cpp
GrumpyShell/src/Init/: main.cpp
GrumpyTools/: BackUp_CMakeLists.txt  CMakeCache.txt  CMakeLists.txt  GrumpyToolsConfig.cmake  Makefile  build_install  cmake_install.cmake
GrumpyTools/include/Core/: Get.hpp  IRandom.hpp
GrumpyTools/include/Data/: Key.hpp  QKey.hpp  QKey_ParseValuePairs.cpp
GrumpyTools/include/IO/: FileInfo.hpp  Reader.hpp
GrumpyTools/src/Core/: Color_implementation.txt  Get.cpp  IRandom.cpp
GrumpyTools/src/Data/: QKey.cpp
GrumpyTools/src/IO/: Reader.cpp
